--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,3 +1,27 @@
+header {
+    text-align: center;
+}
+
 body {
     text-align: center;
+}
+
+.date-container {
+    justify-content: center;
+    display: flex;
+}
+
+.showtime-box {
+    border: 1px solid #ccc;
+    margin: 5px;
+    padding: 10px;
+    text-align: center;
+}
+
+.day-abbreviation {
+    font-weight: bold;
+}
+
+.day-number {
+    margin-top: 5px;
 }
