--- a/src/main/resources/templates/showtimes.html
+++ b/src/main/resources/templates/showtimes.html
@@ -9,19 +9,36 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="date-container">
-        <button th:each="date, index : ${allDates}"
-                th:class="${index == 0} ? 'active' : ''"
-                hx-get="@{'/showtimes/' + ${date}}"
-                hx-trigger="click"
-                hx-swap="outerHTML"
-                hx-target="#movie-list"
-                hx-boost="true"
-                hx-select=".date-container button">
-            <span class="day-abbreviation" th:text="${#temporals.format(date, 'E')}"></span>
-            <span class="day-number" th:text="${#temporals.format(date, 'dd.MM')}"></span>
-        </button>
+    <div class="mainContainer">
+        <div class="dateButtons">
+            <button class="btnDate" th:each="date : ${allDates}"
+                    th:attr="data-url=${'/showtimes/' + #temporals.format(date, 'yyyy-MM-dd')}"
+                    onclick="window.location.href=this.getAttribute('data-url')">
+                <p class="day-abbreviation" th:text="${#temporals.format(date, 'E')}"><br /></p>
+                <p class="day-number" th:text="${#temporals.format(date, 'dd.MM')}"></p>
+            </button>
+        </div>
+        <div th:fragment="movie_list" id="movie_list">
+            <ul class="movies">
+                <li th:each="entry : ${moviesWithShowtimes}">
+                    <div class="movieListEntry" th:id="${'movieListEntry_' + entry.key.id}">
+                        <img class="imgPoster" th:src="${entry.key.poster}" alt="movie poster">
+                        <div class="movieDetails" th:id="${'movieDetails_' + entry.key.id}">
+                            <h2 class="movieTitle" th:text="${entry.key.title}">Movie Title</h2>
+                            <p class="movieDescription" th:text="${entry.key.description}">Movie Description</p>
+                            <p class="movieRuntime" th:text="'Czas trwania: ' + ${entry.key.runtime} + ' minut'">Movie Runtime</p>
+                            <p class="movieReleaseYear" th:text="'Premiera: ' + ${entry.key.releaseYear}">Movie Release Year</p>
+                            <p class="movieGenres" th:text="${entry.key.getGenresAsString()}">Movie Genres</p>
+                            <div class="playtimeButtons" th:id="playtimeButtons">
+                                <button class="btnPlaytime" th:each="showtime : ${entry.value}">
+                                    <p class="btnPlaytimeCaption" th:text="${#temporals.format(showtime.eventTime, 'HH:mm')}"></p>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div id="movie-list" th:replace="~{fragments/movie_list}"></div>
 </body>
 </html>
