--- a/src/main/resources/templates/showtimes.html
+++ b/src/main/resources/templates/showtimes.html
@@ -30,7 +30,9 @@
                             <p class="movieReleaseYear" th:text="'Premiera: ' + ${entry.key.releaseYear}">Movie Release Year</p>
                             <p class="movieGenres" th:text="${entry.key.getGenresAsString()}">Movie Genres</p>
                             <div class="playtimeButtons" th:id="playtimeButtons">
-                                <button class="btnPlaytime" th:each="showtime : ${entry.value}">
+                                <button class="btnPlaytime"
+                                        th:each="showtime : ${entry.value}"
+                                        th:href="@{/booking(showtimeId=${showtime.id})}">
                                     <p class="btnPlaytimeCaption" th:text="${#temporals.format(showtime.eventTime, 'HH:mm')}"></p>
                                 </button>
                             </div>
