--- a/src/main/resources/templates/showtimes.html
+++ b/src/main/resources/templates/showtimes.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Repertuar</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}" />
+    <title>Kino XYZ - Repertuar</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/showtimes_styles.css}" />
     <script src="https://unpkg.com/htmx.org@1.9.10"
             integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
             crossorigin="anonymous"></script>
@@ -13,7 +13,8 @@
         <div class="dateButtons">
             <button class="btnDate" th:each="date : ${allDates}"
                     th:hx-get="@{/showtimes(date=${#temporals.format(date, 'yyyy-MM-dd')})}"
-                    hx-target="#movie_list">
+                    hx-target="#movie_list"
+                    hx-boost="true">
                 <p class="day-abbreviation" th:text="${#temporals.format(date, 'E')}"><br /></p>
                 <p class="day-number" th:text="${#temporals.format(date, 'dd.MM')}"></p>
             </button>
