--- a/src/main/resources/static/booking_styles.css
+++ b/src/main/resources/static/booking_styles.css
@@ -31,10 +31,14 @@ ul {
     border-radius: 1px;
     color: black;
     font-size: 10px;
-    background-color: yellowgreen;
+    background-color: #95b75c;
 }
 
-#btnSeatTaken {
+#btnSeatAvailable:hover {
+    background-color: #7a9349;
+}
+
+#btnSeatChosen {
     width: 25px;
     height: 25px;
     margin-bottom: 5px;
@@ -43,7 +47,38 @@ ul {
     border-radius: 1px;
     color: white;
     font-size: 10px;
-    background-color: #7e2424;
+    background-color: #6c2727;
+}
+
+#btnSeatChosen:hover {
+    background-color: #7c2d2d;
+}
+
+#btnSeatOccupied {
+    width: 25px;
+    height: 25px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    border: none;
+    border-radius: 1px;
+    color: white;
+    font-size: 10px;
+    background-color: #4d4d4d;
+}
+
+.purchaseButton {
+    margin-right: 20px;
+    border: none;
+    padding: 8px;
+    font-size: 16px;
+    background-color: #2a6277;
+    color: white;
+    border-radius: 8px;
+    transition: background-color 150ms;
+}
+
+.purchaseBtnLabel {
+    padding: 5px;
 }
 
 .seatButton {}
@@ -62,8 +97,42 @@ ul {
 }
 
 .posterImg {
-    height: 200px;
+    height: 250px;
     width: auto;
     padding: 10px;
     margin-top: 30px;
 }
+
+.bookingDetailsDiv {
+    margin-top: 30px;
+}
+
+.chosenSeatsDetailsDiv {
+    height: 450px;
+    width: 250px;
+}
+
+.chosenSeatsTable {
+    width: 100%;
+}
+
+.chosenSeatsRow, .chosenSeatDetails {
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+
+.chosenSeatPrice {
+    padding-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
