--- a/src/main/resources/static/checkout_styles.css
+++ b/src/main/resources/static/checkout_styles.css
@@ -14,6 +14,13 @@ ul {
     list-style: none;
 }
 
+.mainContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .homeButton {
     margin-right: 20px;
     border: none;
