--- a/src/main/resources/static/showtimes_styles.css
+++ b/src/main/resources/static/showtimes_styles.css
@@ -3,6 +3,7 @@ header {
 }
 
 body {
+    margin: 0;
     text-align: center;
     color: white;
     background-color: #163846;
@@ -14,7 +15,7 @@ ul {
 }
 
 .mainContainer {
-    margin-top: 300px;
+    margin-top: 30px;
     margin-left: 20%;
     margin-right: 20%;
 }
