--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -27,24 +27,19 @@
                 <table class="seatsTable" id="seatsTable">
                     <tr th:each="row : ${seats}">
                         <td th:each="seat : ${row}">
-                            <button th:fragment="seatButtonAvailable"
-                                    th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).AVAILABLE}"
-                                    class="seatButton" id="btnSeatAvailable"
-                                    th:text="${seat.getRowInRomanNumerals()} + ' ' + ${seat.getColumn()}"
-                                    th:attr="hx-post=@{/booking(row=${seat.row},column=${seat.column},chosen='true')}"
-                                    hx-swap="outerHTML" hx-boost="true">Seat Number
-                            </button>
-                            <button th:fragment="seatButtonChosen"
-                                    th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).RESERVED}"
-                                    class="seatButton" id="btnSeatChosen"
-                                    th:text="${seat.getRowInRomanNumerals()} + ' ' + ${seat.getColumn()}"
-                                    th:attr="hx-post=@{/booking(row=${seat.row},column=${seat.column},chosen='false')}"
-                                    hx-swap="outerHTML" hx-boost="true">Seat Number
-                            </button>
-                            <button th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).OCCUPIED}"
-                                    class="seatButton" id="btnSeatOccupied"
-                                    th:text="${seat.getRowInRomanNumerals()} + ' ' + ${seat.getColumn()}">Seat Number
-                            </button>
+                            <img th:src="@{images/seat_available.png}" th:fragment="seatButtonAvailable"
+                                 th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).AVAILABLE}"
+                                 class="seatButton" id="btnSeatAvailable"
+                                 th:attr="hx-post=@{/booking(row=${seat.row},column=${seat.column},chosen='true')}"
+                                 hx-swap="outerHTML" hx-boost="true" alt="available seat">
+                            <img th:src="@{images/seat_chosen.png}" th:fragment="seatButtonChosen"
+                                 th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).RESERVED}"
+                                 class="seatButton" id="btnSeatChosen"
+                                 th:attr="hx-post=@{/booking(row=${seat.row},column=${seat.column},chosen='false')}"
+                                 hx-swap="outerHTML" hx-boost="true" alt="chosen seat">
+                            <img th:src="@{images/seat_occupied.png}" th:fragment="seatButtonOccupied"
+                                 th:if="${seat.getStatus() == T(dw.cinema_ticket_manager.model.SeatStatus).OCCUPIED}"
+                                 class="seatButton" id="btnSeatOccupied" alt="occupied seat">
                         </td>
                     </tr>
                 </table>
