--- a/src/main/resources/static/checkout_styles.css
+++ b/src/main/resources/static/checkout_styles.css
@@ -43,4 +43,26 @@ ul {
     justify-content: center;
     align-items: center;
     width: max-content;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid white;
+    border-radius: 10px;
+    background-color: #122D38;
 }
+
+.refundDetailsDiv {
+    padding: 8px;
+}
+
+.ticketQrCode {
+    margin: 5px;
+}
+
+
+
+
+
+
+
+
+
