--- a/src/main/resources/static/showtimes_styles.css
+++ b/src/main/resources/static/showtimes_styles.css
@@ -67,7 +67,7 @@ ul {
 }
 
 .movieListEntry {
-    border-top: 1px white;
+    border-top: 1px solid white;
     display: flex;
     text-align: center;
 }
